lectures/reveal.js/theme/ttw.css
/**
 * Theme from me, TTW! :)
 *
 * By Hakim El Hattab, http://hakim.se
 */
@import url(fonts/source-sans-pro/source-sans-pro.css);
@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Epilogue:ital,wght@0,400;1,300&display=swap');

section.has-dark-background, section.has-dark-background h1, section.has-dark-background h2, section.has-dark-background h3, section.has-dark-background h4, section.has-dark-background h5, section.has-dark-background h6 {
  color: #fff; }

.citation {
  font-size: 12px;
}

.references {
  font-size: 24px; /* hack for this exact list */
}

figcaption {
  font-size: 14px;
}

#title-slide {
  text-align: left;
}

#title-slide .title {
  margin-top: 300px;
  border-left-width: 20px;
  border-left-style: solid;
  border-left-color: #3cb731;
  padding-left: 12px;
}

#title-slide .logo {
  margin-top: 100px;
  float: right;
}

#title-slide .module {
  margin-bottom: 0px;
}

#title-slide .author {
  display: inline;
  float:left;
  font-weight: bold;
  margin-top: 0px;
}

#title-slide .date {
  float: right;
  font-weight: bold;
  margin-top: 0px;
}

.reveal .slide {
  text-align: left;
}

.reveal figure {
  text-align: center;
}

.reveal .controls.helpbutton {
  bottom: initial;
  top: 90px;
}

.reveal li {
  margin-bottom: 10px;
}

.reveal ul li strong {
  border-bottom: 2px solid green;
}

.reveal .footer {
  position: absolute;
  bottom: 1em;
  left: 65px;
  font-size: 0.5em;
  width: 1720px;
  border-top: 1px solid gray;
  padding-top: 3px;
  padding-left: 3px;
}

.footer .footertext {
  display: inline;
}

.reveal .logo {
  margin: 0;
  position: absolute;
  right: 0.6em;
  bottom: 1.3em;
}


/*********************************************
 * GLOBAL STYLES
 *********************************************/
:root {
  --background-color: #fff;
  --main-font: Raleway, sans-serif;
  --main-font-size: 42px;
  --main-color: #222;
  --block-margin: 20px;
  --heading-margin: 0 0 20px 0;
  --heading-font: Epilogue, sans-serif;
  --heading-color: #222;
  --heading-line-height: 1.2;
  --heading-letter-spacing: normal;
  --heading-text-transform: uppercase;
  --heading-text-shadow: none;
  --heading-font-weight: 600;
  --heading1-text-shadow: none;
  --heading1-size: 2.5em;
  --heading2-size: 1.6em;
  --heading3-size: 1.3em;
  --heading4-size: 1em;
  --code-font: monospace;
  --link-color: #2a76dd;
  --link-color-hover: #6ca0e8;
  --selection-background-color: #98bdef;
  --selection-color: #fff; }

.reveal-viewport {
  background: #fff;
  background-color: #fff; }

.reveal {
  font-family: Raleway, Helvetica, sans-serif;
  font-size: 36px;
  font-weight: normal;
  color: #222; }

.reveal ::selection {
  color: #fff;
  background: #98bdef;
  text-shadow: none; }

.reveal ::-moz-selection {
  color: #fff;
  background: #98bdef;
  text-shadow: none; }

.reveal .slides section,
.reveal .slides section > section {
  line-height: 1.3;
  font-weight: inherit; }

/*********************************************
 * HEADERS
 *********************************************/
.reveal h1,
.reveal h2,
.reveal h3,
.reveal h4,
.reveal h5,
.reveal h6 {
  margin: 0 0 20px 0;
  color: #222;
  font-family: Epilogue, Helvetica, sans-serif;
  font-weight: 600;
  line-height: 1.2;
  letter-spacing: normal;
  text-transform: uppercase;
  text-shadow: none;
  word-wrap: break-word; }

.reveal h1 {
  font-size: 2.5em; }

.reveal h2 {
  font-variant: small-caps;
  text-transform: none;
  border-bottom: 1px solid darkgrey;
  font-size: 1.6em; }

.reveal h3 {
  font-size: 1.3em; }

.reveal h4 {
  font-size: 1em; }

.reveal h1 {
  text-shadow: none; }

.reveal dl {
  display: block;
  text-align: left;
  margin-left: 1em;
  margin-top: 0;
  margin-bottom: 1em;
  margin-right: 0;
}

.reveal dt::before {
  content: "Definition: ";
}

/*********************************************
 * OTHER
 *********************************************/
.reveal p {
  margin: 20px 0;
  line-height: 1.3; }

/* Ensure certain elements are never larger than the slide itself */
.reveal img,
.reveal video,
.reveal iframe {
  max-width: 95%;
  max-height: 95%; }

.reveal strong,
.reveal b {
  font-weight: bold; }

.reveal em {
  font-style: italic; }

.reveal ol,
.reveal ul {
  display: block;
  text-align: left;
  margin: 0 0 0 1em; }

.reveal ol {
  list-style-type: decimal; }

.reveal ul {
  list-style-type: none; }

.reveal ul ul {
  list-style-type: disc; }

.reveal ul ul ul {
  list-style-type: circle; }

.reveal ul ul,
.reveal ul ol,
.reveal ol ol,
.reveal ol ul {
  display: block;
  margin-left: 2em; }

.reveal dt {
  border-left-width: 7px;
  border-left-style: solid;
  border-left-color: #3cb731;

  margin-top: 0.3em;
  font-weight: bold; }

.reveal dd {
  margin-left: 40px; }

.reveal blockquote {
  display: block;
  position: relative;
  width: 70%;
  margin: 20px auto;
  padding: 5px;
  font-size: 0.7em;
  font-style: italic;
  background: rgba(255, 255, 255, 0.05);
  box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.2); }

.reveal blockquote p:first-child,
.reveal blockquote p:last-child {
  display: inline-block; }

.reveal q {
  font-style: italic; }

.reveal pre {
  display: block;
  position: relative;
  width: 90%;
  margin: 20px auto;
  text-align: left;
  font-size: 0.75em;
  font-family: monospace;
  line-height: 1.2em;
  word-wrap: break-word;
  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.15); }

.reveal code {
  font-family: monospace;
  text-transform: none; }

.reveal pre code {
  display: block;
  padding: 5px;
  overflow: auto;
  max-height: 400px;
  word-wrap: normal; }

.reveal table {
  margin: auto;
  border-collapse: collapse;
  border-spacing: 0; }

.reveal table th {
  font-weight: bold; }

.reveal table th,
.reveal table td {
  text-align: left;
  padding: 0.2em 0.5em 0.2em 0.5em;
  border-bottom: 1px solid; }

.reveal table th[align="center"],
.reveal table td[align="center"] {
  text-align: center; }

.reveal table th[align="right"],
.reveal table td[align="right"] {
  text-align: right; }

.reveal table tbody tr:last-child th,
.reveal table tbody tr:last-child td {
  border-bottom: none; }

.reveal sup {
  vertical-align: super;
  font-size: smaller; }

.reveal sub {
  vertical-align: sub;
  font-size: smaller; }

.reveal small {
  display: inline-block;
  font-size: 0.6em;
  line-height: 1.2em;
  vertical-align: top; }

.reveal small * {
  vertical-align: top; }

.reveal img {
  margin: 20px 0; }

/*********************************************
 * LINKS
 *********************************************/
.reveal a {
  color: #2a76dd;
  text-decoration: none;
  transition: color .15s ease; }

.reveal a:hover {
  color: #6ca0e8;
  text-shadow: none;
  border: none; }

.reveal .roll span:after {
  color: #fff;
  background: #1a53a1; }

/*********************************************
 * Frame helper
 *********************************************/
.reveal .r-frame {
  border: 4px solid #222;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.15); }

.reveal a .r-frame {
  transition: all .15s linear; }

.reveal a:hover .r-frame {
  border-color: #2a76dd;
  box-shadow: 0 0 20px rgba(0, 0, 0, 0.55); }

/*********************************************
 * NAVIGATION CONTROLS
 *********************************************/
.reveal .controls {
  color: #2a76dd; }

/*********************************************
 * PROGRESS BAR
 *********************************************/
.reveal .progress {
  background: rgba(0, 0, 0, 0.2);
  color: #2a76dd; }

/*********************************************
 * PRINT BACKGROUND
 *********************************************/
@media print {
  .backgrounds {
    background-color: #fff; } }

